<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="8dp"
        android:id="@+id/edit_text"/>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:weightSum="8"
            style="?android:attr/buttonBarStyle">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_one"
                android:textSize="18sp"
                android:onClick="operationFunction"
                android:id="@+id/button_1"/>
            <Button
                android:id="@+id/button_2"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_two"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_3"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_three"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_divide"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:text="@string/button_divide"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:weightSum="8"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/button_4"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_four"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_5"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_five"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_6"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_six"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_minus"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:text="@string/button_minus"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:weightSum="8"
            style="?android:attr/buttonBarStyle">
            <Button
                android:id="@+id/button_7"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_seven"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_8"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_eight"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_9"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_nine"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_plus"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:text="@string/button_sum"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:weightSum="8"
            style="?android:attr/buttonBarStyle">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_c"
                android:textSize="18sp"
                android:onClick="operationFunction"
                android:id="@+id/button_clear"/>
            <Button
                android:id="@+id/button_0"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_zero"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/button_dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:layout_marginEnd="8dp"
                android:text="@string/button_dot"
                android:textSize="18sp"
                android:onClick="operationFunction"/>
            <Button
                android:id="@+id/button_equal"
                android:onClick="operationFunction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:text="@string/button_equal"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>